Tue Feb  4 16:09:14 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: remvoe STR_ASSOC related code.
	  By r44804, string objects can not have STR_ASSOC flag.

	* internal.h: ditto.

	* ext/objspace/objspace_dump.c (dump_object): ditto.

Tue Feb  4 14:07:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (str_associate, str_associated): keep associated objects
	  in an instance variables, instead of in the internal structure.

	* string.c (rb_str_associate, rb_str_associated): deprecate.

Tue Feb  4 12:55:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_modify_expand): enable capacity and disable
	  assocation with packed objects when setting capa, so that
	  pack("p") string fails to unpack properly after modified.

Tue Feb  4 12:45:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): all alphabets are magic characters on
	  case-insensitive filesystems.  [ruby-core:42469] [Feature #5994]

Tue Feb  4 09:47:57 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.2.2 prerelease to check fixes to
	  CI.
	* test/rubygems:  ditto.

Mon Feb  3 12:04:47 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* error.c: [DOC] Exception#cause may return nil. [ci skip]

Sun Feb 2 05:48:42 2014  Eric Wong <e@80x24.org>

	* io.c (rb_io_syswrite): add RB_GC_GUARD
	  [Bug #9472][ruby-core:60407]

Sat Feb  1 15:09:16 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_typedesc2val): add VT_RECORD case.

Sat Feb  1 06:38:51 2014  Zachary Scott  <e@zzak.io>

	* lib/drb/drb.rb: [DOC] Add note about start_service for each process
	  Based on a patch by @rosenfeld [Fixes GH-514] [ci skip]
	  https://github.com/ruby/ruby/pull/514

Sat Feb  1 06:30:20 2014  Zachary Scott  <e@zzak.io>

	* error.c: [DOC] Document Exception#cause by @jasonrclark [ci skip]
	  [Fixes GH-519] https://github.com/ruby/ruby/pull/519

Sat Feb  1 06:10:49 2014  Zachary Scott  <e@zzak.io>
